--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <button class="tab-button import-toggle" id="importToggleBtn">Add Nikkes</button>
         <button class="tab-button clear-toggle" id="clearToggleBtn">Remove Nikkes</button>
         <button class="tab-button export-data" id="exportToggleDataBtn">Save Nikkes lists</button>
-        <button class="tab-button reset-data" id="resetDataBtn" title="Reset all saved data (for troubleshooting)">Reset lists</button>
+        <button class="tab-button reset-data" id="resetDataBtn" title="Reset all saved data (for troubleshooting)">Reset Site Data</button>
     </div>
     <div class="tab-group">
         <button class="tab-button team-tab active" data-set="1">Defender</button>
