--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
         </div>
         <div class="filter-wrapper">
             <button id="filterBtn" class="burst-btn filter-btn" onclick="event.stopPropagation(); event.preventDefault(); setTimeout(function() { toggleFilterPanel(); }, 10);"><i class="filter-icon">⚙️</i></button>
+            <button id="debugBtn" class="burst-btn debug-btn" onclick="event.stopPropagation(); event.preventDefault(); toggleFilterDebugMode();" title="Toggle Debug Mode"><i class="debug-icon">🐞</i></button>
         </div>
     </div>
 </div>
