remove some alert

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <div class="toggle-tabs-container">
     <div class="toggle-container" id="toggleImagesContainer">
         <div class="toggle-header">
-            <h2 class="toggle-title">My Nikkes</h2>
+            <h2 class="toggle-title">My Nikkes List</h2>
             <div class="burst-filter-buttons">
                 <button class="burst-btn" data-value="b1">I</button>
                 <button class="burst-btn" data-value="b2">II</button>
